# FIAP---Tech-Challenge-Fase-4

./: .env  .gitignore  BASE DE DADOS PEDE 2024 - DATATHON.xlsx  README.md  README_APRESENTACAO.md  README_DATA.md  README_TARGET_STORYTELLING.md  README_datathon_defasagem.md  datathon_storytelling_checklist.md  docker-compose.yml
api/: .dockerignore  README.md  dockerfile  main.py  pyproject.toml
api/src/: main.py  model_loader.py  prediction_route.py  schemas.py
api/src/config/: logging_config.py
api/tests/: test_model_loader.py  test_predict.py
arquivos_do_projeto/: BASE DE DADOS PEDE 2024 - DATATHON.xlsx  Links adicionais da passos.docx  PEDE_ Pontos importantes.docx  README_ANALISE_TABELAS.md  inventario_colunas_tabelas.csv
arquivos_do_projeto/Bases antigas/: PEDE_PASSOS_DATASET_FIAP.xlsx  README_COLUNAS_PEDE_PASSOS_DATASET_FIAP.md
data/processed/: pede_2022.csv  pede_2023.csv  pede_2024.csv  pede_dataset.csv
pipeline_ml/: README.md  README_COLUNAS_CONSOLIDADO.md  README_EXECUCAO.md  dev_pipeline.py  pyproject.toml  train.py
pipeline_ml/aa_preprocessing/: README.md  preprocessing.py  preprocessing_config.py  preprocessing_data.py
pipeline_ml/ba_feature_engineering/: feature_engineering.py  feature_engineering_config.py
pipeline_ml/ca_train/: train_model.py
pipeline_ml/da_evaluate/: evaluate.py
pipeline_ml/tests/: test_evaluate.py  test_feature_engineering.py  test_preprocessing.py  test_train_model.py
pipeline_ml/utils/: io.py  load_data.py  print_utils.py
