[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "scikit-learn>=1.7.2",
    "uvicorn[standard]>=0.41.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
]
