[project]
name = "pipeline-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]>=0.135.1",
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.7.2",
]
